# pelican-collection-demo

./: README.md  archives.html  authors.html  categories.html  diwan-of-jami-manuscript.html  excerpt-from-the-book-of-horses-faras-nmh-rsl-fy-lkhywl.html  exhibit-b-inline-image-references.html  faridun-crosses-the-river-dijla-fol-33v.html  index.html  launch.html  map-of-the-world.html  page-from-the-shahnama.html  panel-from-iran.html  pelicanconf.py  portrait-of-fath-ali-shah.html  portrait-of-hasan-ali-mirza-shuja-al-saltana.html  portrait-of-sheikh-ali-mirza.html  publishconf.py  pyproject.toml  silk-tapestry-depicting-the-story-of-leila-and-majnun.html  sulwan-al-mutaa.html  tags.html  tasks.py  the-dalail-al-khayrat-of-al-juzuli.html
author/: frederik-elwert.html  mihr-ali.html
category/: blog.html  collection.html  exhibits.html
content/: 2024-09-17_Launch.md
content/Exhibits/: b.md
content/pages/: about.md  home.md
feeds/: all.atom.xml  blog.atom.xml  collection.atom.xml  exhibits.atom.xml
images/derivatives/iiif/images/: vips-properties.xml
images/derivatives/iiif/obj1/: manifest.json
images/derivatives/iiif/obj10/: manifest.json
images/derivatives/iiif/obj11/: manifest.json
images/derivatives/iiif/obj12/: manifest.json
images/derivatives/iiif/obj2/: manifest.json
images/derivatives/iiif/obj3/: manifest.json
images/derivatives/iiif/obj4/: manifest.json
images/derivatives/iiif/obj5/: manifest.json
images/derivatives/iiif/obj6/: manifest.json
images/derivatives/iiif/obj7/: manifest.json
images/derivatives/iiif/obj8/: manifest.json
images/derivatives/iiif/obj9/: manifest.json
pages/: about-this-demo.html  tify.html
theme/css/: custom.css  style.css
theme/tify/: index2.html  index3.html  index4.html
(+28 files in other folders)
