[project]
name = "pelican-collection-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "html5lib>=1.1",
    "invoke>=2.2.0",
    "markdown>=3.7",
    "pelican-collection-builder",
    "pelican-image-process>=3.0.4",
    "pelican-jinja2content>=1.0.1",
    "pelican>=4.9.1",
]

[tool.uv]
dev-dependencies = [
    "livereload>=2.7.0",
]

[tool.uv.sources]
pelican-collection-builder = { path = "../pelican-collection-builder", editable = true }
